<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="@color/colorBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle"
        android:textColor="@color/colorBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TableLayout
        android:id="@+id/table_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_marginTop="20dp"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:id="@+id/txt_kode_transaksi"
                android:text="@string/kode_transaksi"
                />

            <EditText
                android:id="@+id/edit_kode_transaksi"
                android:layout_marginStart="20dp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txt_no_kamar"
                android:text="@string/no_kamar"
                />
            <EditText
                android:id="@+id/edit_no_kamar"
                android:layout_marginStart="20dp"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txt_tipe_kamar"
                android:text="@string/tipe_kamar"
                android:layout_gravity="center_vertical"
                />

            <TableLayout
                android:layout_marginStart="20dp">
                <TableRow>
                    <RadioButton
                        android:id="@+id/rb_executive"
                        android:text="@string/rb_executive"/>
                    <RadioButton
                        android:id="@+id/rb_deluxe"
                        android:text="@string/rb_deluxe"/>
                </TableRow>
                <TableRow>
                    <RadioButton
                        android:id="@+id/rb_standard"
                        android:text="@string/rb_standard"/>
                    <RadioButton
                        android:id="@+id/rb_economic"
                        android:text="@string/rb_economic"/>
                </TableRow>
            </TableLayout>

        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txt_harga_kamar"
                android:text="@string/harga_kamar"
                />
            <EditText
                android:id="@+id/edit_harga_kamar"
                android:layout_marginStart="20dp"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txt_tambahan_fasilitas"
                android:text="@string/tambahan_fasilitas"
                />
            <LinearLayout
                android:layout_marginStart="20dp"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/cb_bed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_bed"
                    />
                <CheckBox
                    android:id="@+id/cb_towel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_towel"
                    />
            </LinearLayout>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txt_lama_menginap"
                android:text="@string/lama_menginap"
                />
            <LinearLayout
                android:layout_marginStart="20dp"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/edit_lama_menginap"
                    android:layout_height="wrap_content"
                    android:layout_width="70dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hari"
                    />
            </LinearLayout>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txt_pembayaran"
                android:text="@string/pembayaran"
                />
            <Spinner
                android:id="@+id/spin_pembayaran"
                android:layout_marginStart="20dp"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txt_jumlah_customer"
                android:text="@string/jumlah_customer"
                />
            <Spinner
                android:id="@+id/spin_jumlah_customer"
                android:layout_marginStart="20dp"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_proses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/table_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/proses"
        />

    <TextView
        android:id="@+id/txt_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_proses"
        android:layout_marginTop="10dp"
        android:text="@string/output"
        />
</RelativeLayout>